--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <!-- <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cabin.png" alt="..." /> -->
                                     <!-- Portfolio Modal - Text-->
-                                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="2000%" src="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/file/qSR12ducpp6tgAaPSRWaGZ/Case-Study-Embedding-Test?type=design&node-id=102%3A6902&mode=design&t=00rnkuFk0X3s17Jw-1" allowfullscreen></iframe>
+                                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1200" height="4450" src="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/file/qSR12ducpp6tgAaPSRWaGZ/Case-Study-Embedding-Test?type=design&node-id=102%3A6902&mode=design&t=00rnkuFk0X3s17Jw-1" allowfullscreen></iframe>
 <!--                                    <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -310,7 +310,7 @@
                                     <!-- Portfolio Modal - Image-->
 <!--                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="..." />-->
                                     <!-- Portfolio Modal - Text-->
-                                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FWLiL6Gk1gYzhsLg1tPtiOW%2FCase-Study%3Ftype%3Ddesign%26node-id%3D103%253A12289%26mode%3Ddesign%26t%3DvKwYaWATkQXijdwN-1" allowfullscreen></iframe>
+                                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1200" height="4450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FWLiL6Gk1gYzhsLg1tPtiOW%2FCase-Study%3Ftype%3Ddesign%26node-id%3D103%253A12289%26mode%3Ddesign%26t%3DvKwYaWATkQXijdwN-1" allowfullscreen></iframe>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -342,7 +342,7 @@
                                     <!-- Portfolio Modal - Image-->
 <!--                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="..." />-->
                                     <!-- Portfolio Modal - Text-->
-                                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FWLiL6Gk1gYzhsLg1tPtiOW%2FCase-Study%3Ftype%3Ddesign%26node-id%3D103%253A13145%26mode%3Ddesign%26t%3DvKwYaWATkQXijdwN-1" allowfullscreen></iframe>
+                                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1200" height="4450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FWLiL6Gk1gYzhsLg1tPtiOW%2FCase-Study%3Ftype%3Ddesign%26node-id%3D103%253A13145%26mode%3Ddesign%26t%3DvKwYaWATkQXijdwN-1" allowfullscreen></iframe>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
